Updated image links in hopes of svg graphics showing correctly on GitHub Pages.

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         <div class="features__service-item--wrapper">
           <figure class="features__service-item--icon">
-            <img src="assets/service-icons/shield-icon_secure.svg" alt="">
+            <img src="./assets/" alt="">
           </figure>
           <div class="service-item--information-wrapper">
             <h4 class="features__service-item--heading">
@@ -169,7 +169,7 @@
 
         <div class="features__service-item--wrapper">
           <figure class="features__service-item--icon">
-            <img src="assets/service-icons/support-icon_24-7.svg" alt="">
+            <img src="./assets/service-icons/support-icon_24-7.svg" alt="">
           </figure>
           <div class="service-item--information-wrapper">
             <h4 class="features__service-item--heading">
@@ -183,7 +183,7 @@
 
         <div class="features__service-item--wrapper">
           <figure class="features__service-item--icon">
-            <img src="assets/service-icons/customize-icon_customizable.svg" alt="">
+            <img src="./assets/service-icons/customize-icon_customizable.svg" alt="">
           </figure>
           <div class="service-item--information-wrapper">
             <h4 class="features__service-item--heading">
@@ -197,7 +197,7 @@
 
         <div class="features__service-item--wrapper">
           <figure class="features__service-item--icon">
-            <img src="assets/service-icons/reliable-icon_reliable.svg" alt="">
+            <img src="./assets/service-icons/reliable-icon_reliable.svg" alt="">
           </figure>
           <div class="service-item--information-wrapper">
             <h4 class="features__service-item--heading">
@@ -211,7 +211,7 @@
 
         <div class="features__service-item--wrapper">
           <figure class="features__service-item--icon">
-            <img src="assets/service-icons/fast-icon_fast.svg" alt="">
+            <img src="./assets/service-icons/fast-icon_fast.svg" alt="">
           </figure>
           <div class="service-item--information-wrapper">
             <h4 class="features__service-item--heading">
@@ -225,7 +225,7 @@
 
         <div class="features__service-item--wrapper">
           <figure class="features__service-item--icon">
-            <img src="assets/service-icons/simple-icon_easy.svg" alt="">
+            <img src="./assets/service-icons/simple-icon_easy.svg" alt="">
           </figure>
           <div class="service-item--information-wrapper">
             <h4 class="features__service-item--heading">
@@ -234,7 +234,7 @@
             <p class="service-item--information-description">
               Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
             </p>
-            <img src="/assets/blob-red-features.svg" class="blob-red__features" alt="red blob">
+            <img src="./assets/blob-red-features.svg" class="blob-red__features" alt="red blob">
           </div>
         </div>
 
@@ -256,8 +256,8 @@
         </a>
       </div>
       <figure class="quality-work__hero-img--wrapper">
-        <img src="assets/quality-work-section.png" alt="" class="quality-work__hero-img">
-        <img src="/assets/bracket-purple-quality-work.svg" alt="purple dots" width="84" height="84" " class="
+        <img src="./assets/quality-work-section.png" alt="" class="quality-work__hero-img">
+        <img src="./assets/bracket-purple-quality-work.svg" alt="purple dots" width="84" height="84" " class="
           bracket-purple-dots__quality-work">
       </figure>
 
@@ -265,8 +265,8 @@
 
     <section class="steps__container row">
       <figure class="steps__hero-img--wrapper">
-        <img src="assets/steps-section.png" alt="" class="steps__hero-img">
-        <img src="/assets/bracket-purple-quality-work.svg" alt="purple dots" width="80" height="80" " class="
+        <img src="./assets/steps-section.png" alt="" class="steps__hero-img">
+        <img src="./assets/bracket-purple-quality-work.svg" alt="purple dots" width="80" height="80" " class="
           square-purple-dots__steps">
       </figure>
       <div class="steps__information--wrapper">
@@ -624,9 +624,9 @@
               Us</button>
           </a>
         </div>
-        <img src="/assets/blog-purple-top-getting-started.svg" alt="" class="blob-dark__getting-started--top"
+        <img src="./assets/blog-purple-top-getting-started.svg" alt="" class="blob-dark__getting-started--top"
           width="320" height="320">
-        <img src="/assets/blog-purple-top-getting-started.svg" alt="" class="blob-dark__getting-started--bottom"
+        <img src="./assets/blog-purple-top-getting-started.svg" alt="" class="blob-dark__getting-started--bottom"
           width="320" height="320">
       </div>
     </section>
@@ -716,21 +716,21 @@
       </p>
       <div class="footer__main--social-media-links-wrapper">
         <a href="https://www.facebook.com" class="footer__facebook-link--img-link">
-          <img src="assets/footer-social-links-facebook.svg" alt="" class="footer__facebook-link--img">
+          <img src="./assets/footer-social-links-facebook.svg" alt="" class="footer__facebook-link--img">
         </a>
         <a href="https://www.twitter.com" class="footer__twitter-link--img-link">
-          <img src="assets/footer-social-links-twitter.svg" alt="" class="footer__twitter-link--img">
+          <img src="./assets/footer-social-links-twitter.svg" alt="" class="footer__twitter-link--img">
         </a>
         <a href="https://www.youtube.com" class="footer__youtube-link--img-link">
-          <img src="assets/footer-social-links-youtube.svg" alt="" class="footer__youtube-link--img">
+          <img src="./assets/footer-social-links-youtube.svg" alt="" class="footer__youtube-link--img">
         </a>
 
       </div>
 
     </div>
-    <img src="/assets/blog-purple-top-getting-started.svg" alt="" class="blob-dark__getting-footer--top" width="420"
+    <img src="./assets/blog-purple-top-getting-started.svg" alt="" class="blob-dark__getting-footer--top" width="420"
       height="420">
-    <img src="/assets/blog-purple-top-getting-started.svg" alt="" class="blob-dark__getting-footer--bottom" width="420"
+    <img src="./assets/blog-purple-top-getting-started.svg" alt="" class="blob-dark__getting-footer--bottom" width="420"
       height="420">
   </footer>
 
