Fixed minor issues on Treact Challenge project (incomplete image icon path, space between title text).

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         <div class="features__service-item--wrapper">
           <figure class="features__service-item--icon">
-            <img src="./assets/" alt="">
+            <img src="./assets/service-icons/shield-icon_secure.svg" alt="">
           </figure>
           <div class="service-item--information-wrapper">
             <h4 class="features__service-item--heading">
@@ -540,7 +540,7 @@
       <span class="section__heading-highlight--title text-highlight--primary">
         Faqs
       </span>
-      <h2>You have<span class="text-highlight--primary">Questions?</span>
+      <h2>You have <span class="text-highlight--primary">Questions?</span>
       </h2>
       <p class="heading--description">
         And we have got answers to all of them. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
